# Services/Bones.Api/Controllers/WorkItemController.cs
@@ -1,6 +1,10 @@
 using Bones.Api.Models.WorkItems;
+using Bones.Database.DbSets.GenericItems;
 using Bones.Database.DbSets.WorkItemManagement;
+using Bones.Logic.Features.GenericItem;
 using Bones.Logic.Features.WorkItems.Queue;
+using Bones.Logic.Features.WorkItems.WorkItems;
+using Bones.Shared.Backend.Enums;
 
 namespace Bones.Api.Controllers;
 
@@ -12,7 +16,7 @@ public class WorkItemController(ISender sender) : BonesControllerBase(sender)
 {
     #region GET
     /// <summary>
-    ///     Gets the dashboard for a work item queue
+    ///   Gets the dashboard for a work item queue
     /// </summary>
     /// <param name="workItemQueueId"></param>
     /// <returns>Ok with the results if successful, otherwise BadRequest with a message of what went wrong.</returns>
@@ -32,7 +36,7 @@ public class WorkItemController(ISender sender) : BonesControllerBase(sender)
     }
 
     /// <summary>
-    ///     Gets a work item queue by its ID
+    ///   Gets a work item queue by its ID
     /// </summary>
     /// <param name="workItemQueueId"></param>
     /// <returns>Ok with the results if successful, otherwise BadRequest with a message of what went wrong.</returns>
@@ -49,6 +53,60 @@ public class WorkItemController(ISender sender) : BonesControllerBase(sender)
         }
 
         return GetWorkItemQueueByIdResponse.FromInternal(queue);
+    }
+    #endregion
+
+    #region POST
+    /// <summary>
+    ///   Creates a work item in the specified queue
+    /// </summary>
+    /// <param name="workItemQueueId"></param>
+    /// <param name="request"></param>
+    /// <returns>Ok with the results if successful, otherwise BadRequest with a message of what went wrong.</returns>
+    [HttpPost("{workItemQueueId:guid}/create-work-item", Name = "CreateWorkItemInQueueAsync")]
+    [ProducesResponseType<Guid>(StatusCodes.Status200OK)]
+    [ProducesResponseType<Dictionary<string, string[]>>(StatusCodes.Status400BadRequest)]
+    public async ValueTask<ActionResult<Guid>> CreateWorkItemInQueueAsync(Guid workItemQueueId, [FromBody] CreateWorkItemRequest request)
+    {
+        GenericItemLayout? layout = await Sender.Send(new GetItemLayoutById.Query(request.WorkItemLayoutId, await GetCurrentBonesUserAsync()));
+        if (layout?.CurrentVersion is null)
+        {
+            return BadRequest("Layout not found");
+        }
+
+        Dictionary<Guid, object?> fieldValues = [];
+
+        foreach (GenericItemLayoutFieldVersionLink fieldVersionLink in layout.CurrentVersion.FieldLinks)
+        {
+            GenericItemFieldVersion fieldVersion = fieldVersionLink.FieldVersion;
+            ItemValueModel? fieldValue = request.FieldValues.FirstOrDefault(x => x.FieldVersionId == fieldVersion.Id);
+
+            object? value = fieldVersion.Type switch
+            {
+                FieldType.TextField or FieldType.TextBox or FieldType.ValueList => fieldValue?.StrValue,
+                FieldType.Integer => fieldValue?.IntValue,
+                FieldType.Decimal => fieldValue?.DecimalValue,
+                FieldType.Boolean => fieldValue?.BoolValue,
+                FieldType.DateTime => fieldValue?.DateTimeValue,
+                //FieldType.GeoLocation => fieldValue?.StrValue, // TODO: Handle this
+                _ => null
+            };
+
+            if (value is null && fieldVersion.IsRequired)
+            {
+                return BadRequest($"Field {fieldVersion.Name} is required");
+            }
+
+            fieldValues.Add(fieldVersion.Id, value);
+        }
+
+        CommandResponse? result = await Sender.Send(new CreateWorkItemInQueue.Command(request.Name, workItemQueueId, layout.Id, layout.CurrentVersion.Id, fieldValues, await GetCurrentBonesUserAsync()));
+        if (result is null || !result.Id.HasValue)
+        {
+            return BadRequest(result?.FailureReasons);
+        }
+
+        return result.Id.Value;
     }
     #endregion
 }
